Made a bit more flexible to different numbers of operands